@@ -1,5 +1,11 @@
 2005-08-27  Bruno Haible  <bruno@clisp.org>
 
+	Make the long-float overflow check work on 64-bit platforms.
+	* src/float/lfloat/cl_LF.h (LF_exp_mid, LF_exp_high): Define as
+	'unsigned int', not 'unsigned long'.
+
+2005-08-27  Bruno Haible  <bruno@clisp.org>
+
 	* modules.h (CL_OUTPUT_LABEL): Work around redundant duplication
 	of basic blocks by g++ 4.0.
 	See <http://gcc.gnu.org/bugzilla/show_bug.cgi?id=23345>.
